Pushing demo to GitHub

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -32,6 +32,9 @@ bower_components
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# Babel target directories
+lib
+
 # Dependency directories
 node_modules/
 jspm_packages/
@@ -62,4 +65,3 @@ typings/
 
 # Transpiled JavaScript resource directory
 server/dist
-
